[package]
name = "py-rust-hello-world"
version = "0.1.0"
authors = ["Justin Lewis <justin.lewis@gmail.com>"]

[lib]
name = "hello_world"
crate-type = ["dylib"]

[dependencies]
interpolate_idents = "*"
bson = "0.1.3"
mongodb = "0.1.0"

[dependencies.cpython]
version = "*"
default-features = false
features = ["python27-sys"]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`
